--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,30 +1,96 @@
+@import url("https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,200");
+
+
+
+html{
+  overflow-x:hidden;
+  box-sizing: border-box;
+  padding:0;
+
+}
+
+
+.padding{
+  padding:20px;
+}
+
+.padding-2{
+  padding:10px;
+}
+
+img{
+    width:100%;
+}
+
+
 .container
 {
-     text-align: left;
-     color: rgb(42, 196, 42) ;
-
-}
-.navbar navbar-light
-{
-    text-align: justify;
-    color: rgb(36, 202, 36);
- 
-}
-.footer 
-{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(36, 202, 36);
-    color: rgb(36, 202, 36);
-    text-align: center;
-  }
-  body
-  {
-
-  }
- #container
- {
+     text-align: center; 
+     font-family: Arial, Helvetica, sans-serif; color: rgb(0, 0, 0);
+     width: 90%;
+     margin: auto;
      
- }
+  
+
+}
+
+
+/* NAVIGATION*/
+
+
+
+.navbar-nav li{
+    padding-right:15px;
+    display:inline-block;
+    
+  
+  }
+  
+  .nav-link{
+      font-size:1em !important;
+      font-weight:bold;
+  
+  }
+  
+  
+  
+/*END NAVIGATION*/
+
+
+/*HEADER*/
+
+.banner{
+    display: grid;
+    align-content:center;
+    grid-gap: 15px;
+    grid-template-columns: repeat(1, 1fr);
+    
+        padding:.5rem;
+        font-family:Yanone Kaffeesatz;
+        font-weight: 150;
+        background-color:rgb(0, 0, 0);
+        color:#fff;
+    
+    }
+    
+    .banner p{
+        text-align: center;
+        font-size: 1rem;  
+    }
+    
+    /*END HEADER*/
+
+
+/*FOOTER*/
+#footer{
+  
+    background:#000000;
+  }
+  
+  #footer p{
+    text-align:center;
+    color:#fff;
+    padding:.5rem;
+  }
+  /*END FOOTER*/
+  
