--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -27,9 +27,9 @@ img{
 {
      text-align: center; 
      font-family: Arial, Helvetica, sans-serif; color: rgb(0, 0, 0);
-     width: 90%;
+     width: 1000px;
      margin: auto;
-     
+     height: 200px;
   
 
 }
@@ -67,15 +67,18 @@ img{
     
         padding:.5rem;
         font-family:Yanone Kaffeesatz;
-        font-weight: 150;
+        font-weight: 150px;
         background-color:rgb(0, 0, 0);
         color:#fff;
-    
+        height: 150px;
+       
     }
+
     
     .banner p{
-        text-align: center;
-        font-size: 4rem;  
+        text-align:right ;
+        font-size: 150% ;
+        padding: 60px 60px; 
     }
     
     /*END HEADER*/
@@ -85,12 +88,21 @@ img{
 #footer{
   
     background:#000000;
+
   }
   
-  #footer p{
+#footer p{
     text-align:center;
     color:#fff;
     padding:.5rem;
   }
   /*END FOOTER*/
+
+  .logo img
+  {
+  float: right ;
+  width: 250px;
+  height: 200px ;
+  background: none;
+  }
   
