--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -25,12 +25,9 @@ img{
 
 .container
 {
-     text-align: center; 
-     font-family: Arial, Helvetica, sans-serif; color: rgb(0, 0, 0);
-     width: 1000px;
-     margin: auto;
+
      height: 200px;
-  
+  color: #000000 ;
 
 }
 
