--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,78 +1,69 @@
 @import url("https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,200");
 
-
-
-html{
+html
+{
   overflow-x:hidden;
   box-sizing: border-box;
   padding:0;
-
 }
 
-
-.padding{
+.padding
+{
   padding:20px;
 }
 
-.padding-2{
+.padding-2
+{
   padding:10px;
 }
 
-img{
+img
+{
     width:100%;
 }
 
-
 .container
 {
-
      height: 200px;
   color: #000000 ;
-
 }
-
 
 /* NAVIGATION*/
 
-
-
-.navbar-nav li{
+.navbar-nav li
+{
     padding-right:15px;
-    display:inline-block;
-    
-  
+    display:inline-block; 
   }
   
-  .nav-link{
+  .nav-link
+  {
       font-size:1em !important;
       font-weight:bold;
-  
-  }
-  
-  
-  
+    }
+      
 /*END NAVIGATION*/
 
 
 /*HEADER*/
 
-.banner{
+.banner
+{
     display: grid;
     align-content:center;
     grid-gap: 15px;
     grid-template-columns: repeat(1, 1fr);
-    
-        padding:.5rem;
+            padding:.5rem;
         font-family:Yanone Kaffeesatz;
         font-weight: 150px;
         background-color:rgb(0, 0, 0);
         color:#fff;
         height: 150px;
-       
-    }
+           }
 
     
-    .banner p{
+    .banner p
+    {
         text-align:right ;
         font-size: 150% ;
         padding: 60px 60px; 
@@ -85,16 +76,22 @@ img{
 #footer{
   
     background:#000000;
-
-  }
+     }
   
 #footer p{
     text-align:center;
     color:#fff;
     padding:.5rem;
   }
+
+  .footer 
+  {
+position: sticky;
+  }
+
   /*END FOOTER*/
 
+/*COMPANY LOGO*/
   .logo img
   {
   float: right ;
@@ -102,4 +99,28 @@ img{
   height: 200px ;
   background: none;
   }
-  
+  /*END COMPANY LOGO*/
+
+  /* PARAGRAPH */
+  .introduction
+   {
+position: sticky;
+text-align: center; size: 20px;
+text-indent: 50px;
+word-spacing: 10px;
+padding: 50px;
+font-family: 'Times New Roman'; size: 10px;
+  }
+/* END PARAGRAPH */
+
+/* Vision Statement */
+.vision 
+{
+    text-align: center; size: 20px;
+    font-family: 'Times New Roman'; size: 10px;
+    text-indent: 50px;
+    word-spacing: 5px;
+    padding: 50px;
+    background-image:url("Images/Harris Landscaping Logo without bg.png"); size: px;
+}
+/* End Vision Statement */
